Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,16 @@
 
 .bottomBanner
 {
-    margin-top: 5%;
+    margin: 0px auto;
     color: #222;
     background-color: #edeec9;
+
 }
 
 .introText{
-    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0px;
 }
 
 .container{
